<resources>
    <string name="app_name">PandaSolar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="main_notification_channel_name">panda_solar_notification_channel</string>
    <string name="panda_sale">Panda Sale</string>
    <string name="panda_payment">Panda Lease Payment</string>

    <string name="customer">Customers</string>
    <string name="agent">Agent</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password? </string>
    <string name="recover_password"><u>Click to recover</u></string>
    <string name="show_password">Show password</string>
    <string name="sign_up_here"><u>SIGN UP HERE</u></string>
    <string name="need_help"><u>Need help?</u></string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="panda">Panda</string>
    <string name="equipment">Equipment</string>
    <string name="sale">Sales</string>
    <string name="title_activity_new_sale">NewSaleActivity</string>
    <string name="register">Register</string>
    <string name="permission_denied">Permission denied</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="turn_on_location_warning">You need to turn on location to continue</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="title_activity_register_customer">Customers</string>
    <string name="time_to_resolution">TIME TO RESOLUTION</string>
    <string name="title_activity_new_equipment">NewEquipmentActivity</string>
    <string name="submit">Submit</string>
    <string name="register_new_equipment">Register New Equipment</string>
    <string name="title_activity_query_customer">QueryCustomerActivity</string>
    <string name="query_customer">Query Customer</string>
    <string name="title_activity_sale">SaleActivity</string>
    <string name="customer_search_view">find customer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="direct_sale">Non PayGo Sale</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="choose_sale_type">Choose Sale Type</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="district">District</string>
    <string name="county">Country</string>
    <string name="sub_country">Sub-Country</string>
    <string name="village">Village</string>
    <string name="customer_details">Customer Details</string>
    <string name="place_not_found_register_message">The place you are looking is not registered or found. You can register this place</string>
    <string name="messaage_new_place_registration">Enter the name of the %1$s you want to register.</string>
    <string name="hint_new_place_registration">%1$s Name</string>
    <string name="register_new_place">Register New Place</string>
    <string name="products">Products</string>
    <string name="initial_deposit">Initial Deposit</string>
    <string name="payment_plan">Payment Plan</string>
    <string name="asset_financing">PayGo Sale</string>
    <string name="national_id_upload">Upload a picture of the national ID</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="receipt">Receipt</string>
    <string name="title_activity_installation">InstallationActivity</string>
    <string name="search_customer_for_installation">Search customer for installation</string>
    <string name="search">Search</string>
    <string name="scan_equipment">Scan Equipment</string>
    <string name="get_location_coord_installation">Get location coordinates of your place of installation.</string>
    <string name="install">Install</string>
    <string name="search_location">Search location</string>
    <string name="take_pic_house">Take a picture of the house which you going to make the installation.</string>
    <string name="repair">Repair</string>
    <string name="title_activity_stock_management">Stock Management</string>
    <string name="total_commission">Total Commission</string>
    <string name="stock_management">Stock Mag\'mt</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_activity_direct_asset_financing">DirectAssetFinancingActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>

    <string name="fab_content">Sell</string>
    <string name="products_card">Products</string>
    <string name="stock_card">Sell</string>
    <string name="installation_card">Installation</string>

    <string name="error_message">failed to get result, please try again</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="customer_reg_msg">Add a new customer before making a sale to that specific customer, if the customer has not been registered before</string>


    <string name="pref_sale_notification_key">show_sale_notifications</string>
    <string name="pref_payment_notification_key">show_payment_notifications</string>

    <string name="url_about_us">http://pandasolar.emfsuganda.com/play.php</string>
    <string name="reset_password">Reset Password</string>

    <string name="internet_error">You don"'"t seem to be connected to the internet. Please check your connection and try again or exit and try again later</string>
    <string name="direct_sale_para">PayGo product sale, the entire unit payment is made once and completed, Once the unit is approved, the unit is unlocked</string>
    <string name="lease_sale_para">PayGo product sale, the unit is sold on lease and recurrent payments are made until the unit is cleared over time</string>

    <string name="privacy_policy">
        PandaSolar Uganda under eMFS(U) Ltd built the PandaSolar android app as a solar product service For its contracted agents and employees.
        This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
        If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions unless otherwise defined in this Privacy Policy.
        Information Collection and Use
        The app does use third party services that may collect information used to identify you.
        Link to privacy policy of third party service providers used by the app
        Google Play Services, MTN services Uganda
    </string>

    <string name="service_providers">
        We may employ third-party companies and individuals due to the following reasons:
        To facilitate our Service
        To provide the Service on our behalf
        To perform Service-related services or
        To assist us in analyzing how our Service is used.
        We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
    </string>

    <string name="security">
        We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
        Links to Other Sites
        This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
        Children’s Privacy
        These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.
        Changes to This Privacy Policy
        We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
    </string>

</resources>
