<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_margin"
    tools:context="com.panda.solar.presentation.view.fragments.SaleCustomerDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                    <EditText
                        android:padding="10dp"
                        android:layout_marginBottom="@dimen/layout_margin"
                        android:background="@drawable/edit_text_3px"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/first_name"/>




                    <EditText
                        android:padding="10dp"
                        android:background="@drawable/edit_text_3px"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/middle_name"/>



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:background="@drawable/edit_text_3px"
                    android:hint="@string/last_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/layout_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>


                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>


                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:background="@drawable/edit_text_3px"
                    android:hint="@string/phone_number"/>



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:padding="10dp"
                    android:background="@drawable/edit_text_3px"
                    android:hint="@string/email"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/district"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/layout_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:descendantFocusability="blocksDescendants"
                    android:id="@+id/district_spinner_holder"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:id="@+id/district_place_name"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:textColor="@color/black"
                            />

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:paddingBottom="@dimen/layout_margin">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/drop_down_arrow"/>

                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey"
                    android:layout_marginBottom="@dimen/layout_margin"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/county"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/layout_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:descendantFocusability="blocksDescendants"
                    android:id="@+id/county_spinner_holder"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:id="@+id/county_place_name"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:textColor="@color/black"
                            />

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:paddingBottom="@dimen/layout_margin">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/drop_down_arrow"/>

                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey"
                    android:layout_marginBottom="@dimen/layout_margin"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_country"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/layout_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:descendantFocusability="blocksDescendants"
                    android:id="@+id/sub_county_spinner_holder"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:id="@+id/sub_county_place_name"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:textColor="@color/black"
                            />

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:paddingBottom="@dimen/layout_margin">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/drop_down_arrow"/>

                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey"
                    android:layout_marginBottom="@dimen/layout_margin"/>




                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/village"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/layout_margin"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey"
                    android:layout_marginBottom="@dimen/layout_margin"/>


            </LinearLayout>


        </ScrollView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/customer_detail_next_button"
            android:layout_alignParentBottom="true"
            android:background="@drawable/generic_button_bg"
            android:textColor="@color/white"/>

    </RelativeLayout>

</FrameLayout>
